# bevy-intl

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: reactive_text.rs
src/: components.rs  lib.rs  locales.rs
tests/: integration.rs  reactive.rs
