[package]
name = "bevy-intl"
version = "0.1.1"
edition = "2024"
description = "A custom Bevy plugin for adding traductions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DelsarteAdam/bevy-intl"
authors = ["Delsarte Adam"]
readme = "README.md"

[dependencies]
bevy = "0.16.1"
serde = "1.0.219"
serde_json = "1.0"
regex = "1.11.1"
once_cell = "1.21.3"